@@ -16,8 +16,8 @@
  * Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
  */
 
-#if !defined(BLOOM_FILTER_H)
-#define BLOOM_FILTER_H
+#ifndef DCPLUSPLUS_DCPP_BLOOM_FILTER_H
+#define DCPLUSPLUS_DCPP_BLOOM_FILTER_H
 
 #include "ZUtils.h"
 
