@@ -24,6 +24,7 @@
 * Fixed socket ip bind (thanks garg's quasi-friend)
 * Finished UCMD extension draft implementation
 * Fixed status bars (poy)
+* Fixed protocol error STA being sent as type C
 
 -- 0.703 2007-11-08 --
 * Fixed invalid strings (thanks james ross)
